fixed spacings, padding, position of main section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ h1 {
 
 .profile-pic {
     float: left;
+    margin: 15px;
+}
+
+p {
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 30px;
+    float: clear;
 }
 
 header {
@@ -30,6 +37,7 @@ footer {
     position: absolute;
     bottom: -40;
     width: 100%;
+    
 }
 
 footer p {
@@ -46,8 +54,8 @@ footer p {
     width: 960px;
     background-color: white;
     border: 1px solid lightgrey;
+    margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 40px;
-    margin-left: 25%;
-    margin-right: 25%;
+    padding: 15px;
 }
